--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@
   object-fit: cover;
   display: block;
   margin: 0 auto;
-  max-width: 100%;
+  max-width: 800px;
 }
 
 /* Sharpen your skills section */
